test/e2e/setup/demo-only/voter-gitops/ingress-frontend.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-frontend-static
  namespace: voter
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`demo.configbutler.ai`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: voter-frontend
          port: http
          scheme: http
